Fix Grid spacing

--- a/static/scss/humhub.scss
+++ b/static/scss/humhub.scss
@@ -113,11 +113,6 @@ $prev-gridview: false !default;
     @import "gridview";
 }
 
-$prev-grid: false !default;
-@if not $prev-grid {
-    @import "grid";
-}
-
 $prev-oembed: false !default;
 @if not $prev-oembed {
     @import "oembed";
