--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -130,6 +130,7 @@ $container-max-widths: (
 // Other Bootstrap overwritten variables
 // --------------------------------------------------
 
+$grid-gutter-width: 30px;
 $line-height-base: 1.5;
 $input-border-color: #e9ecef;
 $input-bg: #fff; // default is $body-bg
